# batch-processor

./: .editorconfig  .gitignore  README.md  batch-processor.code-workspace  batch-processor.sln
.devcontainer/: devcontainer.json
apps/website/: Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  start.sh
apps/website/app/: constants.ts  root.tsx  utilities.ts
apps/website/prisma/: schema.prisma
bicep/: main.bicep
bicep/modules/: clientContainerApp.bicep  nodeProcessorContainerApp.bicep  nodeServiceBusProcessorContainerApp.bicep  pythonProcessorContainerApp.bicep  serviceQueues.bicep  sqlDatabase.bicep  storageQueues.bicep
resources/: BatchProcessorArchitecture.drawio
scripts/: common.psm1  deploy.ps1  test.ps1
services/dotnet-processor/: Dockerfile  Program.cs  README.md  dotnet-processor.csproj
services/node-processor/: Dockerfile  README.md  docker-compose.yml  package.json  tsconfig.json
services/node-processor/src/: index.mts
services/node-sb-processor/: .dockerignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
services/node-sb-processor/prisma/: schema.prisma
services/node-sb-processor/src/: index.mts
services/processor/: Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
services/processor/prisma/: schema.prisma
services/python-processor/: Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
services/python-processor/prisma/: schema.prisma
services/python-processor/python_processor/: process.py
(+7 files in other folders)
